Port to 1.20.6
For some reason the chiseled bookshelf tooltip has its rendering broken again